fixed flex gap

--- a/docs/css/queries.css
+++ b/docs/css/queries.css
@@ -201,9 +201,6 @@
 /**************************/
 
 @media (max-width: 22em) {
-  .main-heading {
-    /* font-size: 4rem; */
-  }
   .subtext {
     font-size: 1.6rem;
   }
